--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </ol>
                 <p>
                     <strong>Note:</strong>
-                    You will need 150 AGI tokens for registration (<a href="https://Emperor-agi.github.io/Token_buyer/" target="_blank">purchase AGI tokens</a>), which will need to be pre-approved for registration. The process will guide you through this step if necessary.
+                    You will need 150 AGI tokens for registration (<a href="https://montrealai.xyz/" target="_blank">purchase AGI tokens</a>), which will need to be pre-approved for registration. The process will guide you through this step if necessary.
                 </p>
                 <p>
                     <strong>Pre-Alpha Version</strong>
